<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@color/ColorLight"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal">
        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:src="@drawable/appicon"
                        android:id="@+id/logo" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayoutLogin"
                        android:visibility="invisible">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColorHint="#ffffffff"
                            android:visibility="invisible"
                            android:textColor="#ffffffff"
                            android:hint="@string/prompt_username" />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayoutLogin"
                        android:visibility="invisible">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColorHint="#ffffffff"
                            android:visibility="invisible"
                            android:textColor="#ffffffff"
                            android:hint="@string/prompt_password" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layout_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayoutLogin"
                        android:visibility="invisible">

                        <EditText
                            android:id="@+id/url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColorHint="#ffffffff"
                            android:visibility="invisible"
                            android:textColor="#ffffffff"
                            android:hint="@string/prompt_url" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/guide_url"
                        android:id="@+id/guide_url"
                        android:visibility="invisible"
                        android:gravity="left"
                        android:textSize="10dp"
                        android:textColor="#F00" />

                    <android.support.v7.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:id="@+id/login_card"
                        card_view:cardBackgroundColor="@color/ColorPrimary"
                        card_view:cardCornerRadius="2dp"
                        android:layout_margin="6dp"
                        card_view:cardElevation="6dp">

                        <TextView android:id="@+id/login"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="8.5dp"
                            android:paddingBottom="8.5dp"
                            android:paddingLeft="12dp"
                            android:visibility="invisible"
                            android:paddingRight="12dp"
                            android:gravity="center"
                            android:textColor="#FFF"
                            android:layout_centerInParent="true"
                            android:background="@color/ColorPrimary"
                            android:text="LOGIN" />

                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="122dp"
                        android:text="@string/copy_rights"
                        android:id="@+id/copyrights"
                        android:visibility="invisible"
                        android:gravity="center"
                        android:textColor="#ffffffff" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>